<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mymealapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/mealDetailFragment"
        android:name="com.mymealapp.ui.detail.DetailMealFragment"
        android:label="@string/meal_detail"
        tools:layout="@layout/fragment_detail_meal">
        <argument
            android:name="meal"
            app:argType="com.mymealapp.data.model.Meal" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.mymealapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mymealapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_mealDetailFragment"
            app:destination="@id/mealDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_mealDetailByCategoryFragment"
            app:destination="@id/mealDetailByCategoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_mealByCategoryFragment"
            app:destination="@id/mealByCategoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_areaFragment"
            app:destination="@id/areaFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.mymealapp.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_mealByCategoryFragment"
            app:destination="@id/mealByCategoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/mealByCategoryFragment"
        android:name="com.mymealapp.ui.mealbycategory.MealByCategoryFragment"
        android:label="@string/meal_by_category"
        tools:layout="@layout/fragment_meal_by_category">
        <argument
            android:name="name_of_category"
            app:argType="string" />
        <action
            android:id="@+id/action_mealByCategoryFragment_to_mealDetailByCategoryFragment"
            app:destination="@id/mealDetailByCategoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailByCategoryFragment"
        android:name="com.mymealapp.ui.detail.DetailMealByCategoryFragment"
        android:label="@string/meal_detail"
        tools:layout="@layout/fragment_detail_meal_by_category" >
        <argument
            android:name="id_meal"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/areaFragment"
        android:name="com.mymealapp.ui.area.AreaFragment"
        android:label="@string/area"
        tools:layout="@layout/fragment_area" >
        <action
            android:id="@+id/action_areaFragment_to_mealDetailByCategoryFragment"
            app:destination="@id/mealDetailByCategoryFragment" />
    </fragment>
</navigation>