<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_margin_max"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/common_margin_max" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_marginHorizontal="@dimen/common_margin_min"
            android:textSize="@dimen/common_size_title"
            android:textStyle="bold"
            android:padding="@dimen/common_padding_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:text="@string/what_would_you_like_to_eat"
            android:textSize="@dimen/common_size_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_home" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_home_random"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/common_margin_max"
            android:layout_marginTop="@dimen/common_margin_min"
            app:cardCornerRadius="@dimen/common_corner_default"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_random">

            <ImageView
                android:id="@+id/img_random_meal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/img_random_meal"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>