<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_material_900"
    tools:context=".ui.activities.MainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorOnPrimary"
        android:visibility="gone"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:contentScrim="@color/grey_loading"
            app:collapsedTitleTextColor="?attr/colorOnSecondary"
            app:expandedTitleTextColor="?attr/colorOnPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_app_bar"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/img_app_bar"
                android:scaleType="centerCrop"
                tools:src="@mipmap/ic_launcher"
                android:background="@color/green_material_900"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:tint="?attr/colorOnSecondary"
        android:backgroundTint="@color/green_met"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/common_margin_default"
        app:rippleColor="@color/blue_dark_theme"
        android:contentDescription="@string/fab_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/home_image_size"
        android:src="@drawable/ic_share"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        app:tint="?attr/colorOnSecondary"
        android:backgroundTint="@color/green_met"
        app:rippleColor="@color/blue_dark_theme"
        android:contentDescription="@string/fab_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.detail.CharacterDetailFragment">

            <TextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:layout_marginTop="@dimen/common_margin_min"
                android:textColor="?attr/colorOnPrimary"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/category_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/common_size_normal"
                app:autoSizeTextType="uniform"
                app:drawableStartCompat="@drawable/ic_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:textColor="?attr/colorOnPrimary"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/common_margin_min"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/common_size_normal"
                app:autoSizeTextType="uniform"
                app:drawableStartCompat="@drawable/ic_location_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_category"
                android:text="@string/area_detail" />

            <TextView
                android:id="@+id/txt_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:textColor="?attr/colorOnPrimary"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/common_margin_min"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/common_size_normal"
                app:autoSizeTextType="uniform"
                app:drawableStartCompat="@drawable/ic_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_area"
                android:text="@string/tags_detail" />

            <TextView
                android:id="@+id/txt_instruction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:textColor="?attr/colorOnPrimary"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/common_margin_middle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/common_size_normal"
                app:autoSizeTextType="uniform"
                app:drawableStartCompat="@drawable/ic_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_tags"
                android:text="@string/instructions_detail" />

            <TextView
                android:id="@+id/txt_instruction_descriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_margin_min"
                android:layout_marginTop="@dimen/common_margin_min"
                android:textColor="?attr/colorOnPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/common_size_normal"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_instruction_title"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, " />

            <ImageView
                android:id="@+id/img_youtube_watch_video"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/common_margin_min"
                android:layout_marginVertical="@dimen/common_margin_max"
                android:src="@drawable/ic_smart_display"
                app:backgroundTint="@android:color/transparent"
                android:layout_gravity="bottom|center"
                android:contentDescription="@string/youtube_watch_video"
                app:layout_constraintTop_toBottomOf="@id/txt_instruction_descriptions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>